[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ines-spatial"
version = "0.1.0"
description = "Imputation Noise Evaluation Score (INES) - A tool for evaluating scRNA-seq imputation quality using Earth Mover's Distance"
readme = "README.md"
authors = [
    { name = "INES Development Team", email = "ines@example.com" }
]
maintainers = [
    { name = "INES Development Team", email = "ines@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "bioinformatics",
    "single-cell",
    "scRNA-seq",
    "imputation",
    "spatial-transcriptomics",
    "MERFISH",
    "Xenium",
    "genomics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scanpy>=1.9.0",
    "torch>=1.10.0",
    "seaborn>=0.11.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0.0",
    "h5py>=3.0.0",
    "anndata>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.0",
]
hpc = [
    "psutil>=5.8.0",
    "dask[distributed]>=2022.0.0",
]
all = [
    "ines-spatial[dev,docs,hpc]",
]

[project.urls]
Homepage = "https://github.com/Pixel-Dream/ines_dev"
Documentation = "https://github.com/Pixel-Dream/ines_dev"
Repository = "https://github.com/Pixel-Dream/ines_dev"
"Bug Tracker" = "https://github.com/Pixel-Dream/ines_dev/issues"

[project.scripts]
ines-benchmark = "benchmarks.reconstruction_benchmark:main"
ines-runtime = "benchmarks.runtime_test:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=ines",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/ines"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
